--- a/index.html
+++ b/index.html
@@ -10,11 +10,64 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/ef0d9690f5.js" crossorigin="anonymous"></script>
+    <!-- Estilo customizado -->
+    <link rel="stylesheet" type="text/css" href="css/estilo.css">
     <title>Finans - finanças pessoais</title>
 </head>
 
 <body>
 
+    <header>
+        <nav class="navbar navbar-expand-sm navbar-light bg-warning">
+            <div class="container">
+
+                <a href="" class="navbar-brand">
+                    <img src="img/logo.png" width="142">
+                </a>
+
+                <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-principal">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="nav-principal">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a href="" class="nav-link">Home</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a href="" class="nav-link">Recursos</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a href="" class="nav-link">Benefícios</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a href="" class="nav-link">Preços</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a href="" class="btn btn-outline-light ml-4">Entrar</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <section id="home">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    texto
+                </div>
+                <div class="col-md-6">
+                    imagem
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- JavaScript (Opcional) -->
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
