--- a/index.html
+++ b/index.html
@@ -93,6 +93,112 @@
             </div>
         </div>
     </section>
+    <!--Saiba-->
+    <section class="caixa">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 d-flex">
+                    <div class="align-self-center">
+                        <h2>Saiba para onde vai o seu dinheiro</h2>
+                        <p>
+                            Com o Finans, você categoriza todos os seus lançamentos. Com gráficos simples, você sabe de onde vem e para onde vai o seu dinheiro.
+                        </p>
+                        <a href="" class="btn btn-primary">Veja mais</a>
+                    </div>
+                </div>
+
+                <div class="col-md-6">
+                    <img src="img/saiba.png" class="img-fluid">
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <!--Juros-->
+    <section class="caixa">
+        <div class="container">
+            <div class="row">
+
+                <div class="col-md-6">
+                    <img src="img/juros.png" class="img-fluid">
+                </div>
+
+                <div class="col-md-6 d-flex">
+                    <div class="align-self-center">
+                        <h2>Pare de pagar juros e economize</h2>
+                        <p>
+                            Manter as contas em dia é sempre um problema? O Finans avisa você: receba alertas de contas a pagar e a receber!
+                        </p>
+                        <a href="" class="btn btn-primary">Veja mais</a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <!--Recursos-->
+    <section class="caixa">
+        <div class="container">
+            <div class="row">
+
+                <div class="col-md-4">
+                    <img src="img/facil.png" class="img-fluid">
+                    <p>
+                        O Finans vai além do básico e permite que você faça controles incríveis, essenciais para suas finanças. Simples como tem que ser!
+                    </p>
+                </div>
+
+                <div class="col-md-4">
+                    <img src="img/economize.png" class="img-fluid">
+                    <h4>Economize seu tempo</h4>
+                    <p>
+                        Tempo é dinheiro! Em segundos, você tem tudo sobe controle e aproveite seu tempo com o que realmente importa para você!
+                    </p>
+                </div>
+
+                <div class="col-md-4">
+                    <img src="img/suporte.png" class="img-fluid">
+                    <h4>Suporte amigo</h4>
+                    <p>
+                        Dúvidas? Perguntas? Nosso suporte super legal ajuda você! A gente tá aqui para resolver seus problemas e deixar sua vida bem mais fácil!
+                    </p>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <footer class="mt-4 mb-4">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8">
+                    <p>
+                        <a href="">Home</a>
+                        <a href="">Recursos</a>
+                        <a href="">Benefícios</a>
+                        <a href="">Preços</a>
+                    </p>
+                </div>
+                <div class="col-md-4 d-flex justify-content-end">
+                    <a href="" class="text-primary">
+                        <i class="fab fa-facebook fa-2x"></i>
+                    </a>
+
+                    <a href="" class="text-primary ml-3">
+                        <i class="fab fa-twitter fa-2x"></i>
+                    </a>
+
+                    <a href="" class="text-dark ml-3">
+                        <i class="fab fa-instagram fa-2x"></i>
+                    </a>
+
+                    <a href="" class="text-danger ml-3">
+                        <i class="fab fa-youtube fa-2x"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <!-- JavaScript (Opcional) -->
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
